--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,5 +24,10 @@
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .5rem;
     min-height: 75vh;
+
+    .todo_list {
+      display: grid;
+      gap: 1rem;
+    }
   }
 }
